# ixunfei-docx-reader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.en.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-4-report.md  task-5-report.md
docs/: block-support.md  error-contract.md  release.md  supported-platforms.md
docs/superpowers/plans/: 2026-07-06-ixfdoc-engineering-hardening.md  2026-07-10-image-assets-heading-aware-reading.md  2026-07-10-okr-reader-safety-hardening.md
docs/superpowers/specs/: 2026-07-10-image-assets-heading-aware-reading-design.md  2026-07-10-okr-reader-hardening-design.md
scripts/: extract-release-notes.py  smoke.ps1  smoke.sh
skills/claude-code/ixunfei-docx-reader/: SKILL.md
skills/codex/ixunfei-docx-reader/: SKILL.md
src/ixunfei_docx_reader/: __init__.py  assets.py  cli.py  markdown_chunks.py  reader.py  setup.py
src/ixunfei_docx_reader/converters/: __init__.py  docx_markdown.py
src/ixunfei_docx_reader/cookies/: __init__.py  macos_larkshell.py  windows_larkshell.py
tests/: test_cli_contract.py  test_docx_converter.py  test_image_assets.py  test_markdown_chunks.py  test_okr_reader.py  test_reader_client_vars.py  test_release_notes.py  test_setup.py  test_smoke_scripts.py  test_update_cli.py  test_windows_cookie_provider.py
(+2 files in other folders)
